Kubernetes/Full-Stack Flask Application with MySQL Backend on Kubernetes/flaskapp-project/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: default
  labels:
    app: flask-bucketlist
    tier: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
  clusterIP: None
