Kubernetes/Full-Stack Flask Application with MySQL Backend on Kubernetes/flaskapp-project/flask-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-nodeport
  namespace: default
  labels:
    app: flask-bucketlist
    tier: frontend
spec:
  type: NodePort
  ports:
    - port: 5002
      targetPort: 5002
      nodePort: 30002
      protocol: TCP
  selector:
    app: flask-app
