Kubernetes/Full-Stack Flask Application with MySQL Backend on Kubernetes/flaskapp-project/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
  namespace: default
  labels:
    app: flask-bucketlist
    tier: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80        
      targetPort: 5002 
      protocol: TCP
  selector:
    app: flask-app
