Kubernetes/Full-Stack Flask Application with MySQL Backend on Kubernetes/flaskapp-project/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql       
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: flask-app 
      ports:
        - protocol: TCP
          port: 3306
